--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2764,6 +2764,11 @@ p {
         font-size: 14px;
         padding: 6px 12px;
         cursor: pointer; }
+      .my-account-body .contact-holder .right .input-group-addon {
+        display: flex;
+        align-items: center; }
+        .my-account-body .contact-holder .right .input-group-addon span {
+          margin-left: 10px; }
       .my-account-body .contact-holder .right .margin-top {
         margin-top: 60px; }
     .my-account-body .contact-holder .left {
