--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3439,6 +3439,13 @@ p{
         padding: 6px 12px;
         cursor: pointer;
       }
+      .input-group-addon{
+        display: flex;
+        align-items: center;
+        span{
+          margin-left: 10px;
+        }
+      }
       .margin-top{
         margin-top: 60px;
       }
