--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3279,17 +3279,39 @@ p{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
-    opacity: 0.7;
+    transition: 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: 14;
     visibility: hidden;
+    opacity: 0;
     display: flex;
     justify-content: center;
     .holder{
-      margin-top: 200px;
-      width: 941px;
-      height: 657px;
+      margin-top: 150px;
+      width: 60%;
+      height: 650px;
       background-color: white;
+      padding: 20px 30px;
+      border-radius: 16px;
+      .upper{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        span{
+          font-style: normal;
+          font-weight: 900;
+          font-size: 16px;
+          line-height: 140%;
+          letter-spacing: 0.05em;
+          text-transform: uppercase;
+          color: #1B3864;
+        }
+        button{
+          img{
+
+          }
+        }
+      }
     }
   }
   .contact-holder{
