--- a/template/my_account.html
+++ b/template/my_account.html
@@ -174,6 +174,7 @@
           </button>
         </div>
         <div class="trial-card">
+          <img src="/thecup/resources/img/trial-card.svg" alt="">
           <div class="card-inner">
             <p class="card-title">Dùng thử</p>
             <p class="card-scope">Truy cập giới hạn</p>
@@ -189,6 +190,7 @@
           </button>
         </a>
         <div class="sixmonth-card">
+          <img src="/thecup/resources/img/sixmonth-card.svg" alt="">
           <div class="card-inner">
             <p class="card-title white">Dùng thử</p>
             <p class="card-scope white">Truy cập giới hạn</p>
