--- a/template/restricted_image_post.html
+++ b/template/restricted_image_post.html
@@ -137,52 +137,40 @@
       <div class="img-grid">
         <div class="row">
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-1.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-2.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-3.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-4.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-5.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-6.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-7.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-8.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-9.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-10.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-11.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
           <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-12.png" alt="">
-          </div>
-          <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-13.png" alt="">
-          </div>
-          <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-14.png" alt="">
-          </div>
-          <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-15.png" alt="">
-          </div>
-          <div class="col-4 col-md-3 img-block">
-            <img src="../resources/img/grid/grid-12.png" alt="">
+            <img src="../resources/img/grid/grid-gray.png" alt="">
           </div>
         </div>
       </div>
@@ -193,10 +181,12 @@
         <div class="comment-block">
           <div class="row">
             <div class="col-md-2">
-              <div class="user-avatar"></div>
+              <div class="user-avatar" style="background-color: #dddddd;">
+
+              </div>
             </div>
             <div class="col-md-10">
-              <p class="user-name">tranvanan122</p>
+              <p class="user-name"></p>
               <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                 hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
               <p class="comment-date-time">12/05/2021 20:12</p>
@@ -217,7 +207,7 @@
         <div class="comment-block">
           <div class="row">
             <div class="col-md-2">
-              <div class="user-avatar"></div>
+              <div class="user-avatar" style="background-color: #dddddd;"></div>
             </div>
             <div class="col-md-10">
               <p class="user-name">phanvantai123</p>
@@ -241,7 +231,7 @@
         <div class="post-comment">
           <div class="row">
             <div class="col-md-2">
-              <div class="user-avatar"></div>
+              <div class="user-avatar" style="background-color: #dddddd;"></div>
             </div>
             <div class="col-md-10">
               <div class="form-floating">
@@ -269,35 +259,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <img src="../resources/img/carousel/life-carousel-big-gray.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Tôi lựa chọn du lịch thay vì tiết kiệm tiền cực khổ</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
             <p>1/3</p>
-          </div>
-          <div class="carousel-gradient-bottom"></div>
-        </div>
-        <div class="carousel-item">
-          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Việc hôm nay đừng để ngày mai</h5>
-            <p>Ngày 24 tháng 5, 2020</p>
-          </div>
-          <div class="item-pos">
-            <p>2/3</p>
-          </div>
-          <div class="carousel-gradient-bottom"></div>
-        </div>
-        <div class="carousel-item">
-          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Sống có ý nghĩa hơn</h5>
-            <p>Ngày 24 tháng 5, 2020</p>
-          </div>
-          <div class="item-pos">
-            <p>3/3</p>
           </div>
           <div class="carousel-gradient-bottom"></div>
         </div>
