--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2564,14 +2564,21 @@ p {
     .post-body .news-holder .news-main .news-other-post .other-post .other-post-title {
       margin-top: 0px; }
 
-.login-body .register-holder .forgot-password {
-  margin-top: 20px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
-  color: #2270E8;
-  text-align: center; }
+.login-body .register-holder {
+  height: 550px !important; }
+  .login-body .register-holder .upper {
+    padding: 40px 40px 26px 40px !important; }
+  .login-body .register-holder .btn-forgot-password {
+    width: 100%;
+    margin-top: 20px; }
+    .login-body .register-holder .btn-forgot-password .forgot-password {
+      margin-top: 0px;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 16px;
+      color: #2270E8;
+      text-align: center; }
 
 .register-body, .login-body {
   background-color: #E8EFFA;
@@ -2583,7 +2590,7 @@ p {
     margin-left: auto;
     margin-right: auto; }
   .register-body .register-holder, .login-body .register-holder {
-    height: 550px !important;
+    height: 600px;
     width: 450px;
     margin-top: 32px;
     margin-left: auto;
@@ -2593,7 +2600,7 @@ p {
     box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.07);
     border-radius: 5px; }
     .register-body .register-holder .upper, .login-body .register-holder .upper {
-      padding: 40px 40px 40px 40px !important; }
+      padding: 40px 40px 54px 40px; }
       .register-body .register-holder .upper .reg-title, .login-body .register-holder .upper .reg-title {
         text-align: center;
         font-style: normal;
@@ -2748,7 +2755,7 @@ p {
       color: #767676; }
 
 #forgotPassBody .register-holder {
-  height: 430px !important; }
+  height: 455px !important; }
 
 .my-account-body {
   position: relative; }
