--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -553,7 +553,7 @@
   .podcast-player-holder {
     width: 100%;
     background-color: #092145;
-    height: 160px;
+    height: 200px;
     margin-top: 40px; }
     .podcast-player-holder .upper {
       text-align: center;
@@ -587,7 +587,7 @@
       opacity: 0.1; }
     .podcast-player-holder .lower {
       width: 100%;
-      height: 100px;
+      height: 110px;
       display: flex;
       align-items: center; }
       .podcast-player-holder .lower .button-holder {
@@ -612,19 +612,17 @@
         display: inline-flex;
         align-items: center;
         padding: 0px 20px;
-        margin-top: 14px; }
+        margin-top: 24px; }
         .podcast-player-holder .lower .progress-holder .time-played, .podcast-player-holder .lower .progress-holder .total-time {
           font-style: normal;
           font-weight: normal;
           font-size: 13px;
           line-height: 140%;
           color: #767676; }
-        .podcast-player-holder .lower .progress-holder .progress {
-          display: inline-flex;
-          width: 100%;
-          height: 3px;
-          margin-left: 20px;
-          margin-right: 20px; }
+        .podcast-player-holder .lower .progress-holder #timer {
+          margin-right: 10px; }
+        .podcast-player-holder .lower .progress-holder #duration {
+          margin-left: 10px; }
         .podcast-player-holder .lower .progress-holder .progress-bar {
           transition: width 0.1s ease; }
 
@@ -1698,21 +1696,35 @@
             line-height: 150%;
             color: #2270E8; }
         .my-account-body .contact-holder .left .trial-card {
+          overflow: hidden;
           border-radius: 10px;
           margin-top: 20px;
           padding: 22px;
           height: 185px;
-          width: 100%;
-          background-image: url("/thecup/resources/img/trial-card.svg");
-          background-repeat: no-repeat; }
+          width: 100%; }
+          .my-account-body .contact-holder .left .trial-card img {
+            position: absolute;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; }
         .my-account-body .contact-holder .left .sixmonth-card {
+          overflow: hidden;
           border-radius: 10px;
           margin-top: 35px;
           padding: 22px;
           height: 185px;
-          width: 100%;
-          background-image: url("/thecup/resources/img/sixmonth-card.svg");
-          background-repeat: no-repeat; }
+          width: 100%; }
+          .my-account-body .contact-holder .left .sixmonth-card img {
+            position: absolute;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; }
           .my-account-body .contact-holder .left .sixmonth-card .white {
             color: white !important; }
         .my-account-body .contact-holder .left .card-inner .card-title {
@@ -2111,7 +2123,7 @@
   .podcast-episodes-body .podcast-player-holder {
     width: 100%;
     background-color: #092145;
-    height: 160px;
+    height: 200px;
     margin-top: 40px; }
     .podcast-episodes-body .podcast-player-holder .upper {
       text-align: center;
@@ -2145,7 +2157,7 @@
       opacity: 0.1; }
     .podcast-episodes-body .podcast-player-holder .lower {
       width: 100%;
-      height: 100px;
+      height: 110px;
       display: flex;
       align-items: center; }
       .podcast-episodes-body .podcast-player-holder .lower .button-holder {
@@ -2170,13 +2182,17 @@
         display: inline-flex;
         align-items: center;
         padding: 0px 20px;
-        margin-top: 14px; }
+        margin-top: 20px; }
         .podcast-episodes-body .podcast-player-holder .lower .progress-holder .time-played, .podcast-episodes-body .podcast-player-holder .lower .progress-holder .total-time {
           font-style: normal;
           font-weight: normal;
           font-size: 13px;
           line-height: 140%;
           color: #767676; }
+        .podcast-episodes-body .podcast-player-holder .lower .progress-holder #timer {
+          margin-right: 10px; }
+        .podcast-episodes-body .podcast-player-holder .lower .progress-holder #duration {
+          margin-left: 10px; }
         .podcast-episodes-body .podcast-player-holder .lower .progress-holder .progress {
           display: inline-flex;
           width: 100%;
@@ -2535,6 +2551,10 @@
           font-size: 13px;
           line-height: 140%;
           color: #767676; }
+        .podcast-single-body .podcast-player-holder .lower .progress-holder #timer {
+          margin-right: 10px; }
+        .podcast-single-body .podcast-player-holder .lower .progress-holder #duration {
+          margin-left: 10px; }
         .podcast-single-body .podcast-player-holder .lower .progress-holder .progress {
           display: inline-flex;
           width: 100%;
