--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -678,7 +678,7 @@ $navbar-color : #1B3864;
   .podcast-player-holder{
     width: 100%;
     background-color: #092145;
-    height: 160px;
+    height: 200px;
     margin-top: 40px;
     .upper{
       text-align: center;
@@ -717,7 +717,7 @@ $navbar-color : #1B3864;
     }
     .lower{
       width: 100%;
-      height: 100px;
+      height: 110px;
       display: flex;
       align-items: center;
       .button-holder{
@@ -746,7 +746,7 @@ $navbar-color : #1B3864;
         display: inline-flex;
         align-items: center;
         padding: 0px 20px;
-        margin-top: 14px;
+        margin-top: 24px;
         .time-played,.total-time{
           font-style: normal;
           font-weight: normal;
@@ -754,12 +754,11 @@ $navbar-color : #1B3864;
           line-height: 140%;
           color: #767676;
         }
-        .progress{
-          display: inline-flex;
-          width: 100%;
-          height: 3px;
-          margin-left: 20px;
-          margin-right: 20px;
+        #timer{
+          margin-right: 10px;
+        }
+        #duration{
+          margin-left: 10px;
         }
         .progress-bar{
           transition: width 0.1s ease;
@@ -2146,22 +2145,38 @@ $navbar-color : #1B3864;
           }
         }
         .trial-card{
+          overflow: hidden;
           border-radius: 10px;
           margin-top: 20px;
           padding: 22px;
           height: 185px;
           width: 100%;
-          background-image: url("/thecup/resources/img/trial-card.svg");
-          background-repeat: no-repeat;
+          img{
+            position: absolute;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+          }
         }
         .sixmonth-card{
+          overflow: hidden;
           border-radius: 10px;
           margin-top: 35px;
           padding: 22px;
           height: 185px;
           width: 100%;
-          background-image: url("/thecup/resources/img/sixmonth-card.svg");
-          background-repeat: no-repeat;
+          img{
+            position: absolute;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+          }
           .white{
             color: white!important;
           }
@@ -2657,7 +2672,7 @@ $navbar-color : #1B3864;
     .podcast-player-holder{
       width: 100%;
       background-color: #092145;
-      height: 160px;
+      height: 200px;
       margin-top: 40px;
       .upper{
         text-align: center;
@@ -2696,7 +2711,7 @@ $navbar-color : #1B3864;
       }
       .lower{
         width: 100%;
-        height: 100px;
+        height: 110px;
         display: flex;
         align-items: center;
         .button-holder{
@@ -2725,13 +2740,19 @@ $navbar-color : #1B3864;
           display: inline-flex;
           align-items: center;
           padding: 0px 20px;
-          margin-top: 14px;
+          margin-top: 20px;
           .time-played,.total-time{
             font-style: normal;
             font-weight: normal;
             font-size: 13px;
             line-height: 140%;
             color: #767676;
+          }
+          #timer{
+            margin-right: 10px;
+          }
+          #duration{
+            margin-left: 10px;
           }
           .progress{
             display: inline-flex;
@@ -3175,6 +3196,12 @@ $navbar-color : #1B3864;
             font-size: 13px;
             line-height: 140%;
             color: #767676;
+          }
+          #timer{
+            margin-right: 10px;
+          }
+          #duration{
+            margin-left: 10px;
           }
           .progress{
             display: inline-flex;
