--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,7 +544,7 @@ p {
 .podcast-player-holder {
   width: 100%;
   background-color: #092145;
-  height: 110px;
+  height: 112px;
   margin-top: 60px;
   display: none; }
   .podcast-player-holder .upper {
@@ -655,10 +655,13 @@ p {
         font-size: 13px;
         line-height: 140%;
         color: #767676; }
+      .podcast-player-holder .lower .progress-holder #timer {
+        margin-right: 20px; }
+      .podcast-player-holder .lower .progress-holder #duration {
+        margin-left: 20px; }
       .podcast-player-holder .lower .progress-holder .prog {
         width: 100%;
-        height: 10px;
-        padding: 0px 20px;
+        height: 20px;
         align-items: center;
         display: inline-flex;
         cursor: pointer; }
@@ -674,19 +677,35 @@ p {
         .podcast-player-holder .lower .progress-holder .prog .slider::-webkit-slider-thumb {
           -webkit-appearance: none;
           appearance: none;
-          width: 15px;
-          height: 15px;
+          width: 20px;
+          height: 20px;
           border-radius: 50%;
           background: #ffffff;
           cursor: pointer; }
         .podcast-player-holder .lower .progress-holder .prog .slider::-moz-range-thumb {
-          width: 25px;
-          height: 25px;
+          width: 28px;
+          height: 28px;
           border-radius: 50%;
           background: #04AA6D;
           cursor: pointer; }
       .podcast-player-holder .lower .progress-holder .progress-bar {
         transition: width 0.1s ease; }
+
+.soundlist-holder {
+  background-color: #092145;
+  width: 100%;
+  height: 0px;
+  overflow-y: scroll;
+  align-items: center;
+  transition: 0.2s ease;
+  transform: translateY(-30px);
+  opacity: 0; }
+  .soundlist-holder .btn {
+    display: block;
+    margin: 5px auto;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: 500; }
 
 .footer-holder {
   margin-top: 60px;
@@ -1558,6 +1577,10 @@ p {
         font-size: 13px;
         line-height: 140%;
         color: #767676; }
+      .podcast-episodes-body .podcast-player-holder .lower .progress-holder #timer {
+        margin-right: 20px; }
+      .podcast-episodes-body .podcast-player-holder .lower .progress-holder #duration {
+        margin-left: 20px; }
       .podcast-episodes-body .podcast-player-holder .lower .progress-holder .progress {
         display: inline-flex;
         width: 100%;
@@ -2773,6 +2796,8 @@ p {
     display: flex;
     justify-content: center; }
     .my-account-body .popup-purchase .holder {
+      overflow-scrolling: auto;
+      overflow-y: scroll;
       margin-top: 150px;
       width: 60%;
       height: 650px;
