--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -655,7 +655,7 @@ p{
 .podcast-player-holder{
   width: 100%;
   background-color: #092145;
-  height: 110px;
+  height: 112px;
   margin-top: 60px;
   display: none;
   .upper{
@@ -785,10 +785,15 @@ p{
         line-height: 140%;
         color: #767676;
       }
+      #timer{
+        margin-right: 20px;
+      }
+      #duration{
+        margin-left: 20px;
+      }
       .prog{
         width: 100%;
-        height: 10px;
-        padding: 0px 20px;
+        height: 20px;
         align-items: center;
         display: inline-flex;
         cursor: pointer;
@@ -808,15 +813,15 @@ p{
         .slider::-webkit-slider-thumb {
           -webkit-appearance: none;
           appearance: none;
-          width: 15px;
-          height: 15px;
+          width: 20px;
+          height: 20px;
           border-radius: 50%;
           background: #ffffff;
           cursor: pointer;
         }
         .slider::-moz-range-thumb {
-          width: 25px;
-          height: 25px;
+          width: 28px;
+          height: 28px;
           border-radius: 50%;
           background: #04AA6D;
           cursor: pointer;
@@ -828,6 +833,25 @@ p{
     }
   }
 }
+
+.soundlist-holder{
+  background-color: #092145;
+  width: 100%;
+  height: 0px;
+  overflow-y: scroll;
+  align-items: center;
+  transition: 0.2s ease;
+  transform: translateY(-30px);
+  opacity: 0;
+  .btn{
+    display: block;
+    margin: 5px auto;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: 500;
+  }
+}
+
 .footer-holder{
   margin-top: 60px;
   overflow: hidden;
@@ -1930,6 +1954,12 @@ p{
           font-size: 13px;
           line-height: 140%;
           color: #767676;
+        }
+        #timer{
+          margin-right: 20px;
+        }
+        #duration{
+          margin-left: 20px;
         }
         .progress{
           display: inline-flex;
@@ -3451,6 +3481,8 @@ p{
     display: flex;
     justify-content: center;
     .holder{
+      overflow-scrolling: auto;
+      overflow-y: scroll;
       margin-top: 150px;
       width: 60%;
       height: 650px;
