--- a/template/my_account.html
+++ b/template/my_account.html
@@ -218,8 +218,8 @@
         <img src="/thecup/resources/img/icon/ic_x.svg" width="16" height="16" alt="">
       </button>
     </div>
-    <div class="lower">
-      <table class="table table-hover">
+    <div class="lower table-responsive">
+      <table class="table table-hover table-bordered">
         <thead>
         <tr>
           <th scope="col">Ngày</th>
@@ -247,6 +247,175 @@
           <td>Chuyển khoản</td>
           <td>890.000 VND</td>
         </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+        <tr>
+          <th scope="row">19/07/2021</th>
+          <td>6 tháng</td>
+          <td>Chuyển khoản</td>
+          <td>890.000 VND</td>
+        </tr>
+
         </tbody>
       </table>
     </div>
