add player to podcast-single, podcast-episodes

--- a/template/podcast_episodes.html
+++ b/template/podcast_episodes.html
@@ -136,7 +136,8 @@
                 <div class="play-and-sharing">
                     <div class="row">
                         <div class="col-md-4">
-                            <button class="btn btn-primary play-button d-flex align-items-center">
+                            <button class="btn btn-primary play-button d-flex align-items-center"
+                                    id="playAllBtn" onclick="loadPlaylist(soundObj)">
                                 <i class="fas fa-play"></i>
                                 <span class="ms-auto">Nghe tất cả</span>
                             </button>
@@ -370,37 +371,58 @@
     <div class="upper">
         <span class="podcast-title">Hài lòng với nhưng thứ đã có sẽ làm bạn hạnh phúc hơn</span>
         <div class="dot-seperator"></div>
-        <span class="podcast-name">Phần 2: Quẳng gánh lo đi mà sống</span>
+        <span class="podcast-name" id="track">Phần 2: Quẳng gánh lo đi mà sống</span>
+        <span class="podcast-name" id="soundState">(Đang tạm dừng)</span>
     </div>
     <div class="divider"></div>
     <div class="lower">
         <div class="container">
-           <div class="row">
-               <div class="col-md-4 button-holder">
-                   <span class="material-icons smaterial-icons-outlined">playlist_play</span>
-                   <span class="material-icons material-icons-outlined">1x_mobiledata</span>
-                   <span class="material-icons material-icons-outlined">volume_up</span>
-                   <span class="material-icons material-icons-outlined">skip_previous</span>
-                   <span class="material-icons material-icons-outlined">replay_10</span>
-                   <div class="play-button">
+            <div class="row">
+                <div class="col-md-6 button-holder">
+                    <button class="btn" id="togglePlaylist">
+                        <span class="material-icons smaterial-icons-outlined">playlist_play</span>
+                    </button>
+                    <button class="btn btn-speed" id="speedBtn1X">
+                        <span class="play-speed">1X</span>
+                    </button>
+                    <button class="btn volume-holder">
+                        <span class="material-icons material-icons-outlined" id="volumeHolder">volume_up</span>
+                        <div class="volume-bar" id="volumeProgressWrapper" style="display: none">
+                            <input type="range" min="0" max="100" value="80" class="slider" id="volProgress">
+                        </div>
+                    </button>
+                    <button class="btn" id="prevBtn">
+                        <span class="material-icons material-icons-outlined">skip_previous</span>
+                    </button>
+                    <button id="replay10s" class="btn">
+                        <span class="material-icons material-icons-outlined">replay_10</span>
+                    </button>
+                    <button class="btn play-button" id="playBtn">
                        <span class="material-icons material-icons-outlined">
                         play_arrow
                         </span>
-                   </div>
-                   <span class="material-icons material-icons-outlined">forward_10</span>
-                   <span class="material-icons material-icons-outlined">skip_next</span>
-               </div>
-               <div class="col-md-8 progress-holder">
-                    <span class="time-played">18:42</span>
-                    <div class="progress">
-                       <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </button>
+                    <button id="forward10s" class="btn">
+                        <span class="material-icons material-icons-outlined">forward_10</span>
+                    </button>
+                    <button class="btn" id="nextBtn">
+                        <span class="material-icons material-icons-outlined">skip_next</span>
+                    </button>
+                </div>
+                <div class="col-md-6 progress-holder">
+                    <span id="timer" class="time-played">0:00</span>
+                    <div class="prog" id="durationProgressWrapper">
+                        <input type="range" min="0" max="100" value="0" class="slider" id="progress">
                     </div>
-                   <span class="total-time">34:43</span>
-               </div>
-           </div>
+                    <span id="duration" class="total-time">0:00</span>
+                </div>
+            </div>
         </div>
     </div>
+    <div class="divider"></div>
+
 </div>
+<div class="soundlist-holder" id="soundListHolder" style="visibility: hidden"></div>
 <!--Podcast-player-end-->
 <!--Footer-start-->
 <footer class="footer-holder">
@@ -519,7 +541,27 @@
     </div>
 </footer>
 <!--Footer-end-->
+<script>
+    soundObj = {
+        sound: [
+            {
+                "name": "Chạm đáy nỗi đau",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/ChamDayNoiDau-ERIK-5441608.mp3'"
+            },
+            {
+                "name": "Bài hát số 2",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
+            },
+            {
+                "name": "Hết thương cạn nhớ",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
+            }
+        ]
+    };
+</script>
 <script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/howler.min.js"></script>
+<script src="../assets/js/player.js"></script>
 <script src="../assets/js/main.js"></script>
 <script src="../assets/js/bootstrap.bundle.min.js"></script>
 <script src="../assets/owlcarousel/owl.carousel.min.js"></script>
