--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -2540,6 +2540,7 @@ $navbar-color : #1B3864;
             .row{
               height: 122px;
               margin-right: 0px;
+              width: 100%;
             }
             .podcast-play{
               display: inline-grid;
