--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -459,6 +459,7 @@
             }
         ]
     };
+    generateList();
 </script>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/howler.min.js"></script>
