--- a/template/podcast_episodes.html
+++ b/template/podcast_episodes.html
@@ -14,7 +14,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body class="podcast-episodes-body">
+<body class="podcast-episodes-body" id="playerPageBody">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -137,7 +137,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <button class="btn btn-primary play-button d-flex align-items-center"
-                                    id="playAllBtn" onclick="loadPlaylist(soundObj)">
+                                    id="playAllBtn">
                                 <i class="fas fa-play"></i>
                                 <span class="ms-auto">Nghe tất cả</span>
                             </button>
@@ -188,8 +188,7 @@
         </div>
         <div class="news-main">
             <div class="news-other-post">
-                <div class="podcast">
-                    <a href="/thecup/template/podcast_single.html">
+                <div class="podcast" onclick="playById(0)">
                         <div class="row">
                             <div class="col-md-3 podcast-play">
                                 <div class="play-icon">
@@ -199,17 +198,12 @@
                             </div>
                             <div class="col-md-9">
                                 <p class="post-date">12/05/2021</p>
-                                <p class="podcast-title">Phần 1: Quảng gánh lo đi mà sống</p>
-                                <p class="podcast-description">Cuộc sống đâu lường trước điều gì?
-                                    Tình yêu có thể đến rồi đi. Bàn tay dẫu đang nắm thật chặt mà vẫn lạc nhau. Còn nhớ
-                                    trong ngày nắng nhạt nhòa. Mình quay lưng về phía người kia. Và bước đi rồi chẳng nhìn
-                                    lại dù chỉ một lần.</p>
+                                <p class="podcast-title">Phần 1: Nhạc Chipu</p>
+                                <p class="podcast-description">Lorem ipsum dolor sit amet, lorem ip sum</p>
                             </div>
                         </div>
-                    </a>
                 </div>
-                <div class="podcast">
-                    <a href="/thecup/template/podcast_single.html">
+                <div class="podcast" onclick="playById(1)">
                         <div class="row">
                             <div class="col-md-3 podcast-play">
                                 <div class="play-icon">
@@ -219,16 +213,15 @@
                             </div>
                             <div class="col-md-9">
                                 <p class="post-date">12/05/2021</p>
-                                <p class="podcast-title">Phần 2: Quảng gánh lo đi mà sống</p>
+                                <p class="podcast-title">Phần 2: Bài hát số 2</p>
                                 <p class="podcast-description">Cuộc sống đâu lường trước điều gì?
                                     Tình yêu có thể đến rồi đi. Bàn tay dẫu đang nắm thật chặt mà vẫn lạc nhau. Còn nhớ
                                     trong ngày nắng nhạt nhòa. Mình quay lưng về phía người kia. Và bước đi rồi chẳng nhìn
                                     lại dù chỉ một lần.</p>
                             </div>
                         </div>
-                    </a>
                 </div>
-                <div class="podcast">
+                <div class="podcast" onclick="playById(2)">
                     <div class="row">
                         <div class="col-md-3 podcast-play">
                             <div class="play-icon">
@@ -238,25 +231,7 @@
                         </div>
                         <div class="col-md-9">
                             <p class="post-date">12/05/2021</p>
-                            <p class="podcast-title">Phần 3: Quảng gánh lo đi mà sống</p>
-                            <p class="podcast-description">Cuộc sống đâu lường trước điều gì?
-                                Tình yêu có thể đến rồi đi. Bàn tay dẫu đang nắm thật chặt mà vẫn lạc nhau. Còn nhớ
-                                trong ngày nắng nhạt nhòa. Mình quay lưng về phía người kia. Và bước đi rồi chẳng nhìn
-                                lại dù chỉ một lần.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="podcast">
-                    <div class="row">
-                        <div class="col-md-3 podcast-play">
-                            <div class="play-icon">
-                                <i class="fas fa-play"></i>
-                            </div>
-                            <p class="podcast-time">34 phút</p>
-                        </div>
-                        <div class="col-md-9">
-                            <p class="post-date">12/05/2021</p>
-                            <p class="podcast-title">Phần 4: Quảng gánh lo đi mà sống</p>
+                            <p class="podcast-title">Phần 3: Nhạc Đức phúc</p>
                             <p class="podcast-description">Cuộc sống đâu lường trước điều gì?
                                 Tình yêu có thể đến rồi đi. Bàn tay dẫu đang nắm thật chặt mà vẫn lạc nhau. Còn nhớ
                                 trong ngày nắng nhạt nhòa. Mình quay lưng về phía người kia. Và bước đi rồi chẳng nhìn
@@ -541,12 +516,19 @@
     </div>
 </footer>
 <!--Footer-end-->
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/howler.min.js"></script>
+<script src="../assets/js/player.js"></script>
+<script src="../assets/js/main.js"></script>
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/owlcarousel/owl.carousel.min.js"></script>
+<script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
 <script>
     soundObj = {
         sound: [
             {
-                "name": "Chạm đáy nỗi đau",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/ChamDayNoiDau-ERIK-5441608.mp3'"
+                "name": "Anh oi o lai",
+                "link": "https://thecup.vn/public/music/3%20%c4%90i%20(%c4%90i.%20%c4%90i.%20%c4%90i)%20-%20K-ICM%20x%20T-ICM%20x%20Kelsey%20x%20Zickky%20-%20ICM%20TEAM%20%5bOFFICIAL%20VIDEO%5d.mp3"
             },
             {
                 "name": "Bài hát số 2",
@@ -558,13 +540,8 @@
             }
         ]
     };
+    loadPlaylist(soundObj);
+    generateList();
 </script>
-<script src="../assets/js/jquery.min.js"></script>
-<script src="../assets/js/howler.min.js"></script>
-<script src="../assets/js/player.js"></script>
-<script src="../assets/js/main.js"></script>
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/owlcarousel/owl.carousel.min.js"></script>
-<script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
 </body>
 </html>
