--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -5,6 +5,7 @@ $navbar-color : #1B3864;
     overflow-x: hidden;
   }
   .navbar{
+    margin-top: 150px;
     background-color: $navbar-color;
     height: 62px;
     width: 100%;
