--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,7 +74,7 @@ p{
       visibility: visible;
       opacity: 1;
       height: auto;
-      padding: auto;
+      //padding: auto;
     }
   }
   .btn-light{
@@ -107,6 +107,7 @@ p{
           width: 100%;
           height: 100%;
           overflow: hidden;
+          object-fit: cover;
         }
         .overlay{
           transition: ease-in-out 0.3s;
